--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Waving Flag</title>
+        <title>My Story</title>
         <style>
         </style>
     </head>
