--- a/index.html
+++ b/index.html
@@ -5,55 +5,11 @@
         <title>Scrolling</title>
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="#start">1</a></li>
-                <li><a href="#description">2</a></li>
-                <li><a href="#syntax">3</a></li>
-                <li><a href="#scrollbar">4</a></li>
-                <li><a href="#rotations">5</a></li>
-                <li><a href="#rotations-rotated">6</a></li>
-                <li><a href="#source">7</a></li>
-                <li><a href="#follow">8</a></li>
-            </ul>
-        </nav>
-        <div class="settings">
-            <a href="" class="show-path">Show Path</a>
-        </div>
+        <object class="plane" data="city.svg" type="image/svg+xml"></object>
         <div class="wrapper">
-            <div class="demo">
-                <h1>jQuery Scroll Path</h1>
-                <span class="arrow">&darr;</span> A Quick Demo <span class="arrow">&darr;</span>
-            </div>
-            
-            <div class="description">
-                <span class="big">It's a plugin for defining custom scroll paths.</span>
-            </div>
-
-            <div class="syntax">
-                <span class="big">It uses canvas flavored syntax to draw lines and arcs.</span>
-            </div>
-
-            <div class="scrollbar">
-                <span class="big">It comes with a custom scrollbar.</span>
-            </div>
-
-            <div class="rotations">
-                <span class="big">It also does rotations</span>
-                <span class="upside-down big">in <a href="http://caniuse.com/#feat=transforms2d">supported</a> browsers.</span>
-            </div>
-
-            <div class="source">
-                <span class="big">It's available with documentation on <a href="https://github.com/JoelBesada/scrollpath">GitHub</a>.<span>
-            </div>
-
-            <div class="follow">
-                <span class="big">Feel free to <a href="https://twitter.com/JoelBesada">follow me</a> on Twitter. You can also be <span class="count">a kind person and</span> <a href="https://twitter.com/intent/tweet?original_referer=https%3A%2F%2Ftwitter.com%2Fabout%2Fresources%2Fbuttons&source=tweetbutton&text=jQuery%20Scroll%20Path%20Plugin&url=http%3A%2F%2Fjoelb.me%2Fscrollpath%2F&via=JoelBesada" class="tweet">tweet</a> this.</span>
-            </div>
+            <object class="person" data="person.svg" type="image/svg+xml"></object>
+            <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree2" data="tree.svg" type="image/svg+xml"></object>
         </div>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
-    <script type="text/javascript" src="script/lib/jquery.easing.js"></script>
-    <script type="text/javascript" src="script/jquery.scrollpath.js"></script>
-    <script type="text/javascript" src="script/demo.js"></script>
     </body>
 </html>
