--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
             <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree2" data="tree.svg" type="image/svg+xml"></object>
         </div>
+        <script type="text/javascript" src="scrolling.js"></script>
     </body>
 </html>
