--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
-        <script type="text/javascript" src="jquery.min.js"></script>
+        <script type="text/javascript" src="jquery.scrollpath.js"></script>
         <title>Scrolling</title>
     </head>
     <body>
