--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Scrolling</title>
     </head>
     <body>
-        <object class="plane" data="city.svg" type="image/svg+xml"></object>
+        <object class="plane" data="plane.svg" type="image/svg+xml"></object>
         <div class="wrapper">
             <object class="person" data="person.svg" type="image/svg+xml"></object>
             <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
