--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
+        <script type="text/javascript" src="jQuery_v3.6.0.js"></script>
         <script type="text/javascript" src="jquery.scrollpath.js"></script>
         <title>Scrolling</title>
     </head>
