--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <title>Scrolling</title>
     </head>
     <body>
-        <div class="plane">
+       <!--  <div class="plane">
             <object data="plane.svg" type="image/svg+xml"></object>
-        </div>
+        </div> -->
         <div class="wrapper">
             <object class="person" data="person.svg" type="image/svg+xml"></object>
             <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
