--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script type="text/javascript" src="jQuery_v3.6.0.js"></script>
         <script type="text/javascript" src="jquery.scrollpath.js"></script>
+        <link rel="stylesheet" type="text/css" href="style.css" /> 
         <title>Scrolling</title>
     </head>
     <body>
