--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <object data="plane.svg" type="image/svg+xml"></object>
         </div> -->
         <div class="wrapper">
-            <object class="person" data="person.svg" type="image/svg+xml"></object>
+            <object id="person" data="person.svg" type="image/svg+xml"></object>
             <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree2" data="tree.svg" type="image/svg+xml"></object>
         </div>
