--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         </div> -->
         <div class="wrapper">
             <object id="person" data="person.svg" type="image/svg+xml"></object>
-            <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree2" data="tree.svg" type="image/svg+xml"></object>
+            <object id="tree1" class="tree" data="tree.svg" type="image/svg+xml"></object>
+            <object id="tree2" class="tree" data="tree.svg" type="image/svg+xml"></object>
         </div>
         <script type="text/javascript" src="scrolling.js"></script>
     </body>
