--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
             <object id="person" data="person.svg" type="image/svg+xml"></object>
             <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree2" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree3" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree4" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree5" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree6" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree7" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree8" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree9" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree10" data="tree.svg" type="image/svg+xml"></object>
         </div>
         <script type="text/javascript" src="scrolling.js"></script>
     </body>
