--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         </div> -->
         <div class="wrapper">
             <object id="person" data="person.svg" type="image/svg+xml"></object>
-            <object class="tree1" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree2" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree3" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree1" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree2" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree3" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree4" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree5" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree6" data="tree.svg" type="image/svg+xml"></object>
