--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <object class="tree tree1" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree tree2" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree tree3" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree4" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree5" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree6" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree7" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree8" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree9" data="tree.svg" type="image/svg+xml"></object>
-            <object class="tree10" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree4" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree5" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree6" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree7" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree8" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree9" data="tree.svg" type="image/svg+xml"></object>
+            <object class="tree tree10" data="tree.svg" type="image/svg+xml"></object>
         </div>
         <script type="text/javascript" src="scrolling.js"></script>
     </body>
