--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <object class="tree tree8" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree tree9" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree tree10" data="tree.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud1" data="cloud.svg" type="image/svg+xml"></object>
         </div>
         <script type="text/javascript" src="scrolling.js"></script>
     </body>
