--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             <object class="tree tree9" data="tree.svg" type="image/svg+xml"></object>
             <object class="tree tree10" data="tree.svg" type="image/svg+xml"></object>
             <object class="cloud cloud1" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud2" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud3" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud4" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud5" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud6" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud7" data="cloud.svg" type="image/svg+xml"></object>
+            <object class="cloud cloud8" data="cloud.svg" type="image/svg+xml"></object>
         </div>
         <script type="text/javascript" src="scrolling.js"></script>
     </body>
