--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <object class="cloud cloud6" data="cloud.svg" type="image/svg+xml"></object>
             <object class="cloud cloud7" data="cloud.svg" type="image/svg+xml"></object>
             <object class="cloud cloud8" data="cloud.svg" type="image/svg+xml"></object>
+            <div class="endtext">Fall Break!</div>
         </div>
         <script type="text/javascript" src="scrolling.js"></script>
     </body>
