--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <script type="text/javascript" src="jQuery_v3.6.0.js"></script>
         <script type="text/javascript" src="jquery.scrollpath.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css" /> 
+        <link rel="preconnect" href="https://fonts.googleapis.com"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+        <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
         <title>Scrolling</title>
     </head>
     <body>
